--- a/components/activitylist/default.htm
+++ b/components/activitylist/default.htm
@@ -1,18 +1,33 @@
+<style>
+  .activity-container {
+    padding-top:10px;
+    padding-bottom:10px;
+  }
+</style>
 
-{% for lesson in lessons%}
-<div class="accordion" id="accordionExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingOne">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Accordion Item #1
-        </button>
-      </h2>
-      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+<div id="accordion">
+  {% for lesson in lessons %}
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="heading{{ loop.index }}">
+      <button class="accordion-button {{ loop.first ? '' : 'collapsed' }}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ loop.index }}" aria-expanded="{{ loop.first ? 'true' : 'false' }}" aria-controls="collapse{{ loop.index }}">
+        {{ lesson.title }}
+      </button>
+    </h2>
+    <div id="collapse{{ loop.index }}" class="accordion-collapse collapse{{ loop.first ? ' show' : '' }}" aria-labelledby="heading{{ loop.index }}" data-bs-parent="#accordion">
+      <div class="p-1">
+        {% for activity in lesson.activities %}
+        <div class="activity-container">
+          <div>Lesson {{ loop.index }} : {{ activity.title }}</div>
+          <a 
+            href="#" 
+            data-request="ActivityDetail::onUpdateContent"
+            data-request-update="'ActivityDetail::default': '#result'"
+            data-request-data="{ activity_id: {{activity.id}} }"
+            class="btn btn-primary">Load the activity</a>
         </div>
+        {% endfor %}
       </div>
-    </div>
     </div>
   </div>
   {% endfor %}
+</div>
