--- a/components/courselist/default.htm
+++ b/components/courselist/default.htm
@@ -21,7 +21,11 @@ vertical-align: middle;
         
         <div class="card-body">
           <h5 class="card-title"> {{course.name}}</h5>
-          <p class="card-text">{{course.description}}</p>
+          {% if course.description|length > 100 %}
+              <p class="card-text">{{ course.description|slice(0, 100) ~ '...' }}</p>
+          {% else %}
+              <p class="card-text">{{ course.description }}</p>
+          {% endif %}
           <a href="{{ 'portal/course'|page({ course_id: course.id }) }}" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
